--- a/yt-dlp.conf
+++ b/yt-dlp.conf
@@ -1,1 +1,1 @@
---cookies=/app/yt-dlp-cookies.txt
+# here you can pass additional options to yt-dlp which are not covered by the bot's configuration
